feat: setup event handling and url authorization

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ SLACK_AUTH_TOKEN=
 SLACK_APP_TOKEN=
 SLACK_WEB_HOOK=
 SLACK_SIGNING_SECRET=
+SLACK_VERIFICATION_TOKEN=
+SLACK_ENABLE_DEBUG_MODE=false
