--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,8 @@
 # Configuration
 .env
 
+# Slack Manifest
+manifest.yml
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
