task: wrap up creating base schedules

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,17 @@ WRITE_TIMEOUT=5s
 # Port the profiler server will listen on
 PPROF=6060
 
+# Database Settings
+DB_NAME=oncall
+SSL_MODE=disable
+DB_USER=admin
+DB_PASSWORD=p4ssw0rd
+DB_HOST=localhost
+DB_PORT=5432
+MAX_CONNS=5
+MAX_IDLE_CONNS=5
+MAX_CONN_LIFETIME=0
+
 # Slack Settings
 SLACK_AUTH_TOKEN=
 SLACK_APP_TOKEN=
