task: simplifying model and setting up shift mgmt

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,5 @@ SLACK_WEB_HOOK=
 SLACK_SIGNING_SECRET=
 SLACK_VERIFICATION_TOKEN=
 SLACK_ENABLE_DEBUG_MODE=false
+
+# docker compose vars will be injected below:
