--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Local Build dirs
+.cache 
+
+# Configuration
 .env
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Slack Manifest
+manifest.yml
